[project]
name = "komunitasanakbelajar"
version = "0.1.0"
description = "Wagtail site for Komunitas Anak Belajar (Children Learning Community)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2,<5.3",
    "wagtail>=7.4,<7.5",
    "dj-database-url>=2.3,<3.0",
    # Declared now, wired up in Phase 3 (deployment / media storage).
    "django-storages[s3]>=1.14,<2.0",
    "gunicorn>=23.0,<24.0",
    # Phase 3 — Blogspot archive importer (HTML parsing + feed fetching).
    "beautifulsoup4>=4.12,<5.0",
    "requests>=2.31,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py"]
